added visual blocks plugin
git-svn-id: https://plugins.svn.wordpress.org/42u-html5-upgrade/trunk@584032 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,5 @@
-//42U default styles
+/* css to add new icon for visual blocks to tinyMCE */
+
+.wp_themeSkin span.mce_visualblocks {
+    background-position: -40px -40px;
+}
